feat: Add support for variables and scenarios in test definitions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Load testing DSL framework"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "httpx>=0.28.1",
     "python-dotenv>=1.2.1",
     "textx>=4.3.0",
 ]
