feat: Implement core model and runtime components for test execution

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
 ]
 
 [project.scripts]
-loadforge = "loadforge.main:main"
+loadforge = "loadforge.cli:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
