--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "httpx>=0.28.1",
+    "jsonpath-ng>=1.7.0",
     "python-dotenv>=1.2.1",
     "textx>=4.3.0",
 ]
